k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: ms
  labels:
    observability.homel.dev/telemetry-consumer: "true"
    observability.homel.dev/project: memory-steward
    observability.homel.dev/local-alloy: "true"
