k8s/anythingllm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anythingllm
  namespace: homel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anythingllm
  template:
    metadata:
      labels:
        app: anythingllm
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: anythingllm
          #image: mintplexlabs/anythingllm:latest
          image: ghcr.io/homel-dev/anything-llm:0.24.2
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data
              mountPath: /var/lib/anythingllm
            - name: config
              mountPath: /var/lib/anythingllm/plugins/anythingllm_mcp_servers.json
              subPath: anythingllm_mcp_servers.json
      volumes:
        - name: config
          configMap:
            name: anythingllm-config
        - name: data
          persistentVolumeClaim:
            claimName: anythingllm-data
---
apiVersion: v1
kind: Service
metadata:
  name: anythingllm
  namespace: homel
spec:
  selector:
    app: anythingllm
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
